# KtNewDemoCollection

./: README.md  build.gradle  common.gradle  eric_keystore .jks  gradle.properties  settings.gradle  versions.gradle
cpp_demo1/: CMakeLists.txt
cpp_demo1/src/: main.cpp  main.h
cpp_demo1/src/BizModel/: TestBizModel.h  TestBizModel2.h
cpp_demo1/src/Container/: CFINCollectionVariant.h  CFINOrderedMap.h  CFINOrderedSet.h
cpp_demo1/src/LiveData/: LiveData.cpp  LiveData.h  MediatorLiveData.h  SharedPtrEnable.h
cpp_demo1/src/Mutex/: LiveData.h
cpp_demo1/src/Pointer/: PointerTest1.h
cpp_demo1/src/Reference/: GlobleReference.h  ReferenceTest2.h
jni_test/: CMakeLists.txt  build.gradle
jni_test/src/main/: AndroidManifest.xml
jni_test/src/main/cpp/: CPP2NativeItemTestJNI.cpp  Enum_Meta.h  InfrastructureKt.cxx  JNIContext.cpp  JNIContext.h  JNITest.cpp  JNITestEntrance.cpp  JNITestEntrance.h  Native2CPPItemTestJNI.cpp  TestUtil.h  basic_type_config.i  common_swig_config.i  enum_type_config.i  functional_config.i  jni_item_test.i  jni_item_test_wrap.cxx  jni_item_test_wrap.h  map_type_config.i  shared_ptr_config.i  variant_type_map_config.i  variant_type_wrapper_config.i
jni_test/src/main/cpp/ablility/: AbilityTest.cpp  AbilityTest.h
jni_test/src/main/cpp/bizmodel/: CTradeOrderBizEngine.cpp  CTradeOrderBizEngine.h  FieldBizModel.cpp  FieldBizModel.h  TradeOrderBizEngine.cpp  TradeOrderBizEngine.h
jni_test/src/main/cpp/color/: Enum.h  TestColor.cpp  TestColor.h
jni_test/src/main/cpp/container/: CFINOrderedSet.h  COrderedSet.cpp  COrderedSet.h  CollectionVariant.cpp  CollectionVariant.h  OrderedCollection.cpp  OrderedCollection.h  OrderedSet.cpp  OrderedSet.h
jni_test/src/main/cpp/field/: FieldDataModel.cpp  FieldDataModel.h  FieldKeys.cpp  FieldKeys.h  LiveData.cpp  LiveData.h  MediatorLiveData.h
jni_test/src/main/cpp/lifecycle/: SharedPtrEnable.cpp  SharedPtrEnable.h
jni_test/src/main/cpp/model/: CPP2NativeItemTest.cpp  CPP2NativeItemTest.h  ItemIcon.h  N2CItemIcon.cpp  N2CItemIcon.h  N2CTestItem.cpp  N2CTestItem.h  Native2CPPItemTest.cpp  Native2CPPItemTest.h  TestItem.cpp  TestItem.h
jni_test/src/main/cpp/nsp/: NamespaceTest.cpp  NamespaceTest.h  NamespaceTest2.cpp  NamespaceTest2.h
jni_test/src/main/cpp/observer/: ObserverManager.cpp  ObserverManager.h
jni_test/src/main/cpp/swig_config/: basic_type_config.i  byte_array_config.i  common_swig_config.i  director_config.i  functional_config.i  int_array_config.i  map_type_config.i  shared_ptr_config.i  string_config.i  variant_type_map_config.i  vector_type_config.i
jni_test/src/main/res/drawable/: btn_bg.xml
jni_test/src/main/res/layout/: act_main.xml  fragment_anim_test.xml  fragment_function_test.xml  fragment_tab.xml  item_icon.xml  item_test1.xml
jni_test/src/main/res/values/: colors.xml  ints.xml  strings.xml  styles.xml  themes.xml
jni_test/src/main/swig/cpp/: swig_gen_common.h
jni_test/src/main/swig/scripts/: android_jni_bridge_code_generate.py  android_jni_bridge_code_generate.sh
jni_test/src/main/swig/scripts/config/: basic_type_config.i  byte_array_config.i  common_swig_config.i  director_config.i  functional_config.i  inheritance_class.i  java_object_config.i  java_package_and_import_config.i  macro_process_config.i  map_type_config.i  namespace_config.i  optional_config.i  shared_ptr_config.i  (+4 more)
(+682 files in other folders)
